--- a/index.html
+++ b/index.html
@@ -426,12 +426,15 @@
                 <div class="footer">
                     <div class="content-inner">
                         <div class="row align-items-center">
-                            <div class="copy pt-4 pb-4">
-      <p><a href=" " target="_blank"> © Check out My Friends Portfolio</a>  &nbsp;  |  &nbsp; Design by <a href="https://www.linkedin.com/in/md-mahdi-hasan-nayeem-04a3962b7/" target="_blank">Md. Mahdi Hasan Nayeem</a> &nbsp; | &nbsp;  All rights reserved</p>
-    </div>
-
+                          <p><a href="#" class="card-item">Friend's profile:
+            </a><a href="https://tandra136131.github.io/portfolio/" target="_blank" style="color: rgb(255, 255, 255);">Tandra | </a>
+            <a href="https://anika-22201115.github.io/Augustine100/" target="_blank" style="color: rgb(255, 255, 255);">Anika | </a>
+            <a href="https://rifah03.github.io/RifahTasfia/" target="_blank" style="color: rgb(255, 255, 255);">Rifah | </a>
+            <span>Created By <a href="https://www.linkedin.com/in/md-mahdi-hasan-nayeem-04a3962b7/">Md. Mahdi Hasan Nayeem</a></span>
+          </p>
                         </div>
                     </div>
+
                 </div>
                 <!-- Footer Start -->
             </div>
